--- a/index.html
+++ b/index.html
@@ -6,7 +6,26 @@
 <body>
 
     <div id="test"></div>
-    
+### Markdown
+
+Markdown is a lightweight and easy-to-use syntax for styling your writing. It includes conventions for
+
+```markdown
+Syntax highlighted code block
+
+# Header 1
+## Header 2
+### Header 3
+
+- Bulleted
+- List
+
+1. Numbered
+2. List
+
+**Bold** and _Italic_ and `Code` text
+
+[Link](url) and ![Image](src)
     <script src="src/code-view.js"></script>
     <script src="index.js"></script>
 </body>
