--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>CodeView</title>
     <link rel="stylesheet" href="src/code-view.css">
+    <link rel="stylesheet" href="{{ "/assets/css/main.css, " | prepend: site.baseurl }}">
 </head>
 <body>
 
